# awflShallow

./: .gitmodules  Array.h  CMakeLists.txt  Exchange.h  LICENSE  Makefile  Profiles.h  README.md  Spatial_swm2d_fv_Agrid.h  Temporal_ader.h  Temporal_ader_defines.h  Temporal_ssprk10_4.h  Temporal_ssprk3.h  TransformMatrices.h  WenoLimiter.h  WenoLimiter_old.h  const.h  driver.cpp  init.cpp  io.cpp  io.h  sw_cart.cpp  types.h
doc/: documentation.lyx
inputs/: input_balance_nonsmooth_1d.yaml  input_balance_nonsmooth_2d.yaml  input_balance_smooth_1d.yaml  input_balance_smooth_2d.yaml  input_dam_rect_1d.yaml  input_lake_at_rest_pert_1d.yaml  input_lake_at_rest_pert_2d.yaml  input_order_1d.yaml  input_order_2d.yaml  input_swm2d.yaml
postproc/: lake_at_rest_pert_2d.py  plot2d.py
sage/: Characteristics.ipynb  SW_Characteristics.ipynb  WENO TV.ipynb  c_utils.sage  fortran_utils.sage  generate_transform_header.sage  generate_transform_module.sage  generate_transform_source.sage  transformation_matrices.sage
src/: AderDT.h  Array.h  Domain.h  Exchange.h  FileIO.h  Initialize.h  Initializer.h  KokkosCore_config.h  Makefile  Makefile.fhqwhgads_cpu  Makefile.fhqwhgads_gpu  Makefile.summit_gpu  Makefile.thatchroof_gpu  Parallel.h  Parser.h  Riemann.h  SArray.h  State.h  Tendencies.h  TimeIntegrator.h  TransformMatrices.h  WenoLimiter.h  YAKL.h  cfl.cpp  cfl.h  const.h  diffTransform.cpp  diffTransform.h  driver.cpp  finalize.cpp  finalize.h  haloExchange.cpp  haloExchange.h  init.cpp  init.h  input.txt  io.cpp  io.h  main.cpp  riemann.cpp  (+12 more)
